--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,15 +8,15 @@ upstream api {
 
 server {
 
-    listen 8087;
+    listen 80;
 
     #development specific configuration
-    location /sockjs-node {
-        proxy_pass http://client;
-        proxy_http_version 1.1;
-        proxy_set_header Uprade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-    }
+    # location /sockjs-node {
+    #     proxy_pass http://client;
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Uprade $http_upgrade;
+    #     proxy_set_header Connection "Upgrade";
+    # }
 
     location / {
         proxy_pass http://client;
