--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,10 @@
 version: '3'
 
 services: 
-  postgress: 
+  postgres: 
     image: 'postgres:latest'
+    environment:
+      - POSTGRES_PASSWORD=hammad
   
   redis:
     image: 'redis:latest'
@@ -12,8 +14,9 @@ services:
     build:
       dockerfile: Dockerfile.dev
       context: ./nginx
-    ports: 
-      - '8087:8087'
+    ports:
+      - "8981:80"
+      - "8082:443"
 
   api:
     build:
@@ -28,7 +31,7 @@ services:
       - PGUSER=postgres
       - PGHOST=postgres
       - PGDATABASE=postgres
-      - PGUSER=postgres_password
+      - PGPASSWORD=hammad
       - PGPORT=5432
   
   client:
